1.3
  - in ldap_delete, treat notAllowedOnNonLeaf as non-fatal, allowing
    subtrees to be deleted in incorrect order
  - check for empty DNs later, so that search results including the
    ROOT_DSE do not lead to a parse error anymore
  - for syntax errors, try to open the editor near the error position.
    (This assumes support for the +N argument vi and emacs understand.)

1.2 2004-07-07 r18 (patch-17)
  - fixed segfault: allow deletions to be skipped
    (thanks to Gerfried Fuchs for the bug report)
  - MD5 hashes are stored in crypt()-format, so prepend {CRYPT}, not {MD5}

1.1 2004-01-27 r9 (patch-8)
  - fixed compare() bugs involving fastcmp()
    (thanks to Bernardo Innocenti for the bug report)
  - fixed deleteoldrdn in LDIF output
  - new option --diff
  - tests, some comments

1.0 2004-01-01 r1 (base-0)
  initial release