@@ -14,50 +14,55 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-
 #include <popt.h>
 #include "common.h"
 #include "version.h" 
 
-#define USAGE								    \
-"Usage: ldapvi [OPTION]... [FILTER] [AD]...\n"				    \
-"       ldapvi --diff FILE1 FILE2\n"					    \
-"Perform an LDAP search and update results using a text editor.\n"	    \
-"\n"									    \
-"Connection options:\n"							    \
-"  -h, --host URL         Server.\n"					    \
-"  -D, --user USER        Search filter or DN: User to bind as.     [1]\n"  \
-"  -w, --password SECRET  USER's password.\n"				    \
-"\n"									    \
-"Search parameters:\n"							    \
-"  -b, --base DN          Search base.\n"				    \
-"  -s, --scope SCOPE      Search scope.  One of base|one|sub.\n"	    \
-"  -S, --sort KEYS        Sort control (critical).\n"			    \
-"\n"									    \
-"Miscellaneous options:\n"						    \
-"  -A, --add              Don't search, start with empty file.\n"	    \
-"  -a, --deref            never|searching|finding|always\n"		    \
-"  -M, --managedsait      manageDsaIT control (critical).\n"		    \
-"  -Z, --starttls         Require startTLS.\n"				    \
-"  -q, --quiet            Disable progress output.\n"			    \
-"  -v, --verbose          Note every update.\n"				    \
-"  -!, --noquestions      Don't ask for confirmation.\n"		    \
-"  -H, --help             This help.\n"					    \
-"\n"									    \
-"Environment variables: VISUAL, EDITOR, PAGER.\n"			    \
-"\n"									    \
-"[1] User names can be specified as distinguished names:\n"		    \
-"      uid=foo,ou=bar,dc=acme,dc=com\n"					    \
-"    or search filters:\n"						    \
-"      (uid=foo)\n"							    \
-"    Note the use of parenthesis, which can be omitted from search\n"	    \
-"    filters usually but are required here.  For this searching bind to\n"  \
-"    work, your client library must be configured with appropriate\n"	    \
-"    default search parameters.\n"					    \
-"\n"									    \
-"A special (offline) option is --diff, which compares two files\n"	    \
-"and writes any changes to standard output in LDIF format.\n"		    \
-"\n"									    \
+#define USAGE								   \
+"Usage: ldapvi [OPTION]... [FILTER] [AD]...\n"				   \
+"       ldapvi --diff FILE1 FILE2\n"					   \
+"Perform an LDAP search and update results using a text editor.\n"	   \
+"\n"									   \
+"Connection options:\n"							   \
+"  -h, --host URL         Server.\n"					   \
+"  -D, --user USER        Search filter or DN: User to bind as.     [1]\n" \
+"  -w, --password SECRET  USER's password.\n"				   \
+"\n"									   \
+"Search parameters:\n"							   \
+"  -b, --base DN          Search base.\n"				   \
+"  -s, --scope SCOPE      Search scope.  One of base|one|sub.\n"	   \
+"  -S, --sort KEYS        Sort control (critical).\n"			   \
+"\n"									   \
+"Miscellaneous options:\n"						   \
+"  -A, --add              Don't search, start with empty file.\n"	   \
+"  -a, --deref            never|searching|finding|always\n"		   \
+"  -d, --discover         Auto-detect naming contexts.              [2]\n" \
+"  -c, --config           Print parameters in ldap.conf syntax.\n"         \
+"  -M, --managedsait      manageDsaIT control (critical).\n"		   \
+"  -Z, --starttls         Require startTLS.\n"				   \
+"  -q, --quiet            Disable progress output.\n"			   \
+"  -v, --verbose          Note every update.\n"				   \
+"  -!, --noquestions      Don't ask for confirmation.\n"		   \
+"  -H, --help             This help.\n"					   \
+"\n"									   \
+"Environment variables: VISUAL, EDITOR, PAGER.\n"			   \
+"\n"									   \
+"[1] User names can be specified as distinguished names:\n"		   \
+"      uid=foo,ou=bar,dc=acme,dc=com\n"					   \
+"    or search filters:\n"						   \
+"      (uid=foo)\n"							   \
+"    Note the use of parenthesis, which can be omitted from search\n"	   \
+"    filters usually but are required here.  For this searching bind to\n" \
+"    work, your client library must be configured with appropriate\n"	   \
+"    default search parameters.\n"					   \
+"\n"									   \
+"[2] Repeat the search for each naming context found and present the\n"    \
+"    concatenation of all search results.  Conflicts with --base.\n"	   \
+"    With --config, show a BASE configuration line for each context.\n"    \
+"\n"									   \
+"A special (offline) option is --diff, which compares two files\n"	   \
+"and writes any changes to standard output in LDIF format.\n"		   \
+"\n"									   \
 "Report bugs to \"david@lichteblau.com\"."
 
 static struct poptOption options[] = {
@@ -69,6 +74,7 @@ static struct poptOption options[] = {
 	{"chase",	'C', POPT_ARG_STRING, 0, 'C', 0, 0},
 	{"deref",	'a', POPT_ARG_STRING, 0, 'a', 0, 0},
 	{"sort",	'S', POPT_ARG_STRING, 0, 'S', 0, 0},
+	{"config",	'c', 0, 0, 'c', 0, 0},
 	{"discover",	'd', 0, 0, 'd', 0, 0},
 	{"quiet",	'q', 0, 0, 'q', 0, 0},
 	{"verbose",	'v', 0, 0, 'v', 0, 0},
@@ -127,6 +133,12 @@ parse_arguments(int argc, const char **argv, cmdline *result, GPtrArray *ctrls)
 			break;
 		case 'w':
 			result->password = arg;
+			break;
+		case 'd':
+			result->discover = 1;
+			break;
+		case 'c':
+			result->config = 1;
 			break;
 		case 'q':
 			result->progress = 0;
